--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,14 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.platform=h2
 spring.datasource.username=root
 spring.datasource.password=root
+
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/cliente?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+#spring.datasource.username=root
+#spring.datasource.password=96110221930.Mar
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.datasource.driver.class=com.mysql.jdbc.Driver
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.show-sql=true
